# new-ballot-verifier

./: .babelrc  .gitignore  .prettierignore  Cargo.lock.copy  Cargo.toml  README.md  deny.toml  flake.nix  package.json
.devcontainer/: devcontainer.json
.github/workflows/: base.yml  ci.yml
browserstack/conf/: local-test.conf.js
browserstack/tests/specs/: local_test.js
public/: index.html
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
rust/src/wasm/test/: bench.rs  test.rs
src/: App.tsx  index.tsx  setupProxy.js
src/components/: Button.tsx  Footer.tsx  Header.tsx  Link.tsx
src/screens/ballot-verifier/: BallotVerifierScreen.tsx
